# trading_framework

./: .gitignore  .gitmodules  CMakeLists.txt  IB_NOTES.md  LICENSE  README.md  TECHNICAL_IMPLEMENTATION.md  main.cpp
STOCK/IB/1MIN/: GNUS.csv
STOCK/IB/TICK/: MSFT.csv  NAVB.csv
backtest/: BacktestAccountingService.hpp  BacktestHistoricalService.cpp  BacktestHistoricalService.hpp  BacktestStrategyRunner.cpp  BacktestStrategyRunner.hpp  BacktestStreamingService.cpp  BacktestStreamingService.hpp  BacktestingConfiguration.hpp  CMakeLists.txt  README.md
cli/: CMakeLists.txt  main.cpp
docs/: IB_NOTES.md  TECHNICAL_IMPLEMENTATION.md  TODO.md
domain/: Account.hpp  AccountService.hpp  CMakeLists.txt  Contract.cpp  Contract.hpp  Event.hpp  FilterLowPass.hpp  Order.hpp  Price.hpp  Strategy.cpp  Strategy.hpp  Trade.hpp
ib/: CMakeLists.txt  IBAccountService.cpp  IBAccountService.hpp  IBConfiguration.hpp  IBHistoricalService.cpp  IBHistoricalService.hpp  IBStrategyRunner.cpp  IBStrategyRunner.hpp  IBStreamingService.cpp  IBStreamingService.hpp  IBWrapper.cpp  IBWrapper.h  README.md
market_data/: BarSettings.cpp  BarSettings.hpp  CMakeLists.txt  Contract.cpp  Contract.hpp
market_data/accounting/: AccountingService.hpp
market_data/historical/: HistoricalService.hpp
market_data/streaming/: StreamingService.hpp
risk_management/: Account.hpp  AccountService.hpp  CMakeLists.txt  Event.hpp  MarketMonitor.cpp  Order.hpp  Strategy.cpp  Strategy.hpp  Trade.hpp
store/: CMakeLists.txt  SecurityBackfill.cpp  SecurityFile.hpp
strategies/: CMakeLists.txt  SimpleStart.cpp
test/: CMakeLists.txt  backtester_test.cpp  ibwrapper_test.cpp  strategy_test.cpp  test_config.conf  test_config.json  test_domain.cpp  test_main.cpp  util_test.cpp
util/: CSVParser.hpp  Configuration.cpp  Configuration.hpp  SysLogger.cpp  SysLogger.h  SysLogger.hpp  Time.cpp  Time.hpp
