cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(MyTradingSystem)

add_subdirectory(quandl-cpp)
add_subdirectory(ib)
add_subdirectory(backtest)
add_subdirectory(market_data)
add_subdirectory(domain)
add_subdirectory(test)
add_subdirectory(store)
add_subdirectory(strategies)
add_subdirectory(vendor/date)
add_subdirectory(vendor/pgfe)
set(JSON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/quandl-cpp/modules/json/src)
include_directories(${QUANDLCPP_INCLUDE_DIR} ${CPR_INCLUDE_DIRS} ${JSON_INCLUDE_DIRS})
add_executable(MyTradingSystem main.cpp)
target_link_libraries(MyTradingSystem ${QUANDLCPP_LIB} ${CPR_LIBRARIES})