cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(MyTradingSystem)

add_subdirectory(quandl-cpp)
add_subdirectory(ib)
add_subdirectory(backtest)
add_subdirectory(market_data)
add_subdirectory(domain)
add_subdirectory(test)
add_subdirectory(store)
add_subdirectory(strategies)
add_subdirectory(vendor/date)
add_subdirectory(vendor/pgfe)
add_subdirectory(vendor/rapidjson)
add_subdirectory(cli)